# geospatial_grid

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
data/: dem_cantal.tif  fsc_cantal_viirs_jpss1.nc
notebooks/: example_usage.ipynb
src/geospatial_grid/: __init__.py  georeferencing.py  grid_database.py  gsgrid.py  reprojections.py
src/gisgrid/: georeferencing.py  gisgrid.py  grid_database.py  reprojections.py
tests/: test_georeferencing.py  test_gisgrid.py  test_gsgrid.py  test_reprojections.py
