[project]
name = "gisgrid"
version = "0.1.0"
description = "Wrap-up rioxarray reprojection for xarray in a GIS (Geographical Information Systems) convenient logic"
authors = [
    {name = "Nicola Imperatore", email = "nicola.imperatore@meteo.fr"},
]
dependencies = ["xarray>=2024.7.0", "dask>=2024.8.0", "netCDF4>=1.7.2", "bottleneck>=1.5.0", "rioxarray>=0.15.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "tox>=4.32.0",
]
